--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       transition:0.2s;
       transform:scale(110%);
       background-image:linear-gradient(45deg,#2F3645,#EEEDEB);
-      
+      box-shadow: 0 0 20px 5px;
     }
     .plan-button:hover{
       transition:0.2s;
