--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         
       }
       .plan-button{
+        transition:0.2s;
         background-image: linear-gradient(45deg,#5C5470,#352F44);
         border:none;
         border-radius:5px;
@@ -82,6 +83,7 @@
       transition:0.2s;
       transform:scale(110%);
       padding:10px;
+      box-shadow: 0 0 20px 50x;
     }
   .signup{
     font-weight: bold;
