--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <div class="pricing-container">
       <div class="pricing-plan">
         <div class="plan-title">Basic</div>
-        <div class="plan-price">$9.99/month</div>
+        <div class="plan-price">Rs9.99/month</div>
         <ul class="plan-features">
           <li> 10GB Storage</li>
           <li> 1 User</li>
@@ -125,7 +125,7 @@
       </div>
       <div class="pricing-plan">
         <div class="plan-title">Standard</div>
-        <div class="plan-price">$19.99/month</div>
+        <div class="plan-price">Rs19.99/month</div>
         <ul class="plan-features">
           <li>50GB Storage</li>
           <li>5 Users</li>
@@ -135,7 +135,7 @@
       </div>
       <div class="pricing-plan">
         <div class="plan-title">Premium</div>
-        <div class="plan-price">$49.99/month</div>
+        <div class="plan-price">Rs49.99/month</div>
         <ul class="plan-features">
           <li> 100GB Storage</li>
           <li> 10 Users</li>
